[package]
name = "_snakemeter"
version = "0.1.0"
authors = ["Dmitry Trofimov <dmitry.trofimov@jetbrains.com>"]

[lib]
name = "_snakemeter"
crate-type = ["dylib"]

[dependencies]
mio = "*"
clock_ticks = "*"


[dependencies.cpython]
git = "https://github.com/traff/rust-cpython.git"
branch = "devel"
features = ["python27-sys"]

[dependencies.interpolate_idents]
git = "https://github.com/SkylerLipthay/interpolate_idents.git"
